--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@
     margin-top: 15px;
 }
 .img-1{
-    background-image: url(./images/2.png);
+    background-image: url('./images/2.png');
     background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.2)), url('./images/2.png');
     border-radius: 16px;
     background-position: center;
@@ -23,7 +23,7 @@
     
 }
 .img-2{
-    background-image: url(./images/3.png);
+    background-image: url('./images/3.png');
     background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.2)), url('./images/3.png');
     border-radius: 16px;
     background-position: center;
@@ -31,7 +31,7 @@
     object-fit: cover;
 }
 .img-3{
-    background-image: url(./images/4.png);
+    background-image: url('./images/4.png');
     background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.2)), url('./images/4.png');
     border-radius: 16px;
     background-position: center;
