--- a/style.css
+++ b/style.css
@@ -13,8 +13,8 @@
     margin-top: 15px;
 }
 .img-1{
-    background-image: url('./images/2.png');
-    background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.2)), url('./images/2.png');
+    
+    background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.2)), url('../images/2.png');
     border-radius: 16px;
     background-position: center;
     background-repeat: no-repeat;
@@ -23,16 +23,16 @@
     
 }
 .img-2{
-    background-image: url('./images/3.png');
-    background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.2)), url('./images/3.png');
+    
+    background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.2)), url('../images/3.png');
     border-radius: 16px;
     background-position: center;
     background-repeat: no-repeat;
     object-fit: cover;
 }
 .img-3{
-    background-image: url('./images/4.png');
-    background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.2)), url('./images/4.png');
+    
+    background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.2)), url('../images/4.png');
     border-radius: 16px;
     background-position: center;
     background-repeat: no-repeat;
