--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@
 }
 .img-1{
     
-    background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.2)), url('../images/2.png');
+    background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.2)), url('./images/2.png');
     border-radius: 16px;
     background-position: center;
     background-repeat: no-repeat;
@@ -24,7 +24,7 @@
 }
 .img-2{
     
-    background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.2)), url('../images/3.png');
+    background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.2)), url('./images/3.png');
     border-radius: 16px;
     background-position: center;
     background-repeat: no-repeat;
@@ -32,7 +32,7 @@
 }
 .img-3{
     
-    background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.2)), url('../images/4.png');
+    background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.2)), url('./images/4.png');
     border-radius: 16px;
     background-position: center;
     background-repeat: no-repeat;
