--- a/style.css
+++ b/style.css
@@ -16,7 +16,6 @@
     
     background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.2)), url('./images/2.png');
     border-radius: 16px;
-    background-position: center;
     background-repeat: no-repeat;
     object-fit: cover;
     
@@ -26,16 +25,14 @@
     
     background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.2)), url('./images/3.png');
     border-radius: 16px;
-    background-position: center;
-    background-repeat: no-repeat;
+     background-repeat: no-repeat;
     object-fit: cover;
 }
 .img-3{
     
     background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.2)), url('./images/4.png');
     border-radius: 16px;
-    background-position: center;
     background-repeat: no-repeat;
-   
+    object-fit: cover;
    
 } 
