--- a/style.css
+++ b/style.css
@@ -18,6 +18,7 @@
     border-radius: 16px;
     background-repeat: no-repeat;
     object-fit: cover;
+    width: 100%;
     
     
 }
@@ -27,6 +28,7 @@
     border-radius: 16px;
      background-repeat: no-repeat;
     object-fit: cover;
+    width: 100%;
 }
 .img-3{
     
@@ -34,5 +36,6 @@
     border-radius: 16px;
     background-repeat: no-repeat;
     object-fit: cover;
+    width: 100%;
    
 } 
