--- a/style.css
+++ b/style.css
@@ -17,8 +17,10 @@
     background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.2)), url('./images/2.png');
     border-radius: 16px;
     background-repeat: no-repeat;
+    background-position:center;
     object-fit: cover;
     width: 100%;
+    
     
     
 }
@@ -28,7 +30,9 @@
     border-radius: 16px;
      background-repeat: no-repeat;
     object-fit: cover;
+    background-position:center;
     width: 100%;
+    
 }
 .img-3{
     
@@ -36,6 +40,8 @@
     border-radius: 16px;
     background-repeat: no-repeat;
     object-fit: cover;
+    background-position:center;
     width: 100%;
+    
    
 } 
